# inires

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EvaluationAgent.py  README.md  SolutionGeneratorAgent.py  flock_agent.py  game.js  index.html  issue_reader_agent.py  main.py  pong.html  pong.js  pong_game.css  pong_game.html  pong_game.js  pyproject.toml  requirements-dev.txt  runner.py  solution_generator_agent.py  styles.css  test_agents.py  test_pong.js  test_writer_agent.py  ticket.py  ticket_context.py  writer_agent.py
.github/workflows/: inires.yml  quality-check.yml
frontend/: game.js  index.html  styles.css
inires/: hello.py
path/to/: directory_structure.txt
rust_project/: Cargo.toml
src/: main.py
src/agents/: evaluation_agent.py  reader_agent.py  repo_reader_agent.py  solution_generator_agent.py  ticket_agent.py  writer_agent.py
src/models/: Ticket.py  TicketContext.py  ticket.py  ticket_context.py
src/tests/: test_run_evaluation.py
src/utils/: evaluation.py  tools.py  utils_agents.py  utils_evaluation_agent.py  utils_reader_agent.py  utils_repo_reader_agent.py  utils_solution_generator_agent.py  utils_writer_agent.py
tests/: test_hello.py  test_hello_world.py  test_repo_reader_agent.py  test_solution_generator_agent.py  test_utils_repo_reader_agent.py  test_writer_agent.py
tests/agents/: test_evaluation_agent.py  test_reader_agent.py  test_repo_reader_agent.py  test_writer_agent.py  (+2 more)
tetris_game/: README.md  game.js  index.html  style.css  test_game.js
utils/: test_runner.py  utils_agents.py  utils_repo_reader_agent.py
(+8 files in other folders)
