[project]
name = "inires"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flock>=0.1",
    "flock-core>=0.4.524",
]
[project.optional-dependencies]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "radon>=6.0.1",
    "ruff>=0.12.0",
    "bandit>=1.8.5",
    "black>=25.1.0",
]
[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = "src"